clang/test/Ripple/ripple-parallel/vector-vector-nesting-invalid.c
// NOTE: Assertions have been autogenerated by utils/update_cc_test_checks.py UTC_ARGS: --version 6
// REQUIRES: target=hexagon{{.*}} || target-aarch64 || target-x86_64
// RUN: %clang -ffreestanding -S -Xclang -disable-llvm-passes -emit-llvm -fenable-ripple %s -o %t.pragma.out -DUSING_PRAGMA=1 2> %t.pragma.err; FileCheck %s --input-file=%t.pragma.err --check-prefixes=CHECK-PRAGMA
// RUN: %clang -ffreestanding -S -Xclang -disable-llvm-passes -emit-llvm -fenable-ripple %s -o %t.out 2> %t.err; FileCheck %s --input-file=%t.err

#include <../ripple_test.h>

void check(int Chunk, int64_t N, int32_t start, int64_t end, float x[restrict N],
           float y[restrict N], float xpy[restrict N]) {
  ripple_block_t BST = ripple_set_block_shape(0, 32);
  #ifdef USING_PRAGMA
  #pragma ripple parallel Block(BST) Dims(0)
  #pragma ripple parallel Block(BST) Dims(1) NoRemainder
  #else
  ripple_parallel(BST, 0);
  ripple_parallel_full(BST, 1);
  #endif
  for (int i = start; i < end; ++i)
    xpy[i] = x[i] + y[i];
}

// CHECK-PRAGMA:      vector-vector-nesting-invalid.c:12:3: error: non matching options of consecutive ripple parallel vector
// CHECK-PRAGMA-NEXT:    12 |   #pragma ripple parallel Block(BST) Dims(0)
// CHECK-PRAGMA-NEXT:       |   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// CHECK-PRAGMA-NEXT: vector-vector-nesting-invalid.c:13:3: note: previous use is here
// CHECK-PRAGMA-NEXT:    13 |   #pragma ripple parallel Block(BST) Dims(1) NoRemainder
// CHECK-PRAGMA-NEXT:       |   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

// CHECK:      vector-vector-nesting-invalid.c:15:3: error: non matching options of consecutive ripple parallel vector
// CHECK-NEXT:    15 |   ripple_parallel(BST, 0);
// CHECK-NEXT:       |   ^~~~~~~~~~~~~~~~~~~~~~~
// CHECK:      vector-vector-nesting-invalid.c:16:3: note: previous use is here
// CHECK-NEXT:    16 |   ripple_parallel_full(BST, 1);
// CHECK-NEXT:       |   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
